--- a/app/src/components/Pic/Pic.css
+++ b/app/src/components/Pic/Pic.css
@@ -1,6 +1,13 @@
 .Pic {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     background-color: pink;
-    border: none;
+    border: black solid 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+      /* position: relative; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
 }
