--- a/app/src/components/Card/Card.css
+++ b/app/src/components/Card/Card.css
@@ -4,4 +4,8 @@
     background-color: cadetblue;
     border-radius: 5%;
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
